--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
+    "inputify": "^1.3.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
